<resources>

	<!-- Default or Static -->
	<string name="loading">Loading&#8230;</string>
	<string name="separator">-</string>
	<string name="hello">Hello world!</string>

	<!-- MainView -->
	<!-- ToolBar -->
	<string name="text">测试文字</string>
	<string name="time">00:00</string>
	<string name="current_list">当前列表</string>
	<string name="min_equalizer">-15 dB</string>
	<string name="max_equalizer">15 dB</string>
	<string-array name="band_array">
		<item>60Hz</item>
		<item>230Hz</item>
		<item>910Hz</item>
		<item>3600Hz</item>
		<item>14000Hz</item>
	</string-array>
</resources>
