<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	<ImageButton
			android:id="@+id/main_bottom_ibtn_quit"
			android:layout_alignParentEnd="true"
			android:layout_alignParentBottom="true"
			android:layout_marginEnd="5dp"
			android:layout_width="40dp"
			android:layout_height="40dp"

			android:background="@drawable/btn_background"
			android:scaleType="fitCenter"
			android:src="@drawable/button_next_1"/>

	<ImageButton
			android:id="@+id/main_bottom_ibtn_next"
			android:layout_toStartOf="@id/main_bottom_ibtn_quit"
			android:layout_alignParentBottom="true"
			android:layout_width="40dp"
			android:layout_height="40dp"

			android:background="@drawable/btn_background"
			android:scaleType="fitCenter"
			android:src="@drawable/button_next"/>

	<ImageButton
			android:id="@+id/main_bottom_ibtn_pause"
			android:layout_toStartOf="@id/main_bottom_ibtn_next"
			android:layout_alignParentBottom="true"
			android:layout_width="40dp"
			android:layout_height="40dp"

			android:background="@drawable/btn_background"
			android:scaleType="fitCenter"
			android:src="@drawable/button_pause"/>

	<ImageView
			android:id="@+id/main_bottom_iv_icon"
			android:src="@drawable/default_music_img"
			android:contentDescription="@string/hello"
			android:layout_width="64dp"
			android:layout_height="64dp"/>

	<SeekBar
			android:id="@+id/main_bottom_sbar"
			android:layout_toEndOf="@id/main_bottom_iv_icon"
			android:layout_width="match_parent"
			android:layout_height="20dp"
			android:padding="2dp"/>

	<TextView
			android:id="@+id/main_bottom_tv_musicName"
			android:layout_toEndOf="@id/main_bottom_iv_icon"
			android:layout_toStartOf="@id/main_bottom_ibtn_pause"
			android:layout_below="@id/main_bottom_sbar"
			android:layout_marginStart="5dp"
			android:layout_width="wrap_content"
			android:layout_height="24dp"
			android:gravity="bottom"

			android:singleLine="true"
			android:text="@string/loading"/>

	<TextView
			android:id="@+id/main_bottom_tv_musicArtist"
			android:layout_alignStart="@id/main_bottom_tv_musicName"
			android:layout_below="@id/main_bottom_tv_musicName"
			android:layout_marginTop="2dp"
			android:layout_width="wrap_content"
			android:layout_height="20dp"
			android:gravity="top"

			android:singleLine="true"
			android:maxEms="10"
			android:text="@string/loading"/>

	<TextView
			android:id="@+id/main_bottom_tv_separator"
			android:layout_toEndOf="@id/main_bottom_tv_musicArtist"
			android:layout_alignTop="@id/main_bottom_tv_musicArtist"
			android:layout_width="10dp"
			android:layout_height="24dp"
			android:gravity="center_horizontal"
			android:text="@string/separator"/>

	<TextView
			android:id="@+id/main_bottom_tv_musicAlbum"
			android:layout_toEndOf="@id/main_bottom_tv_separator"
			android:layout_alignTop="@id/main_bottom_tv_musicArtist"
			android:layout_toStartOf="@id/main_bottom_ibtn_pause"
			android:layout_width="wrap_content"
			android:layout_height="24dp"
			android:gravity="top"

			android:singleLine="true"
			android:text="@string/loading"/>

</RelativeLayout>