<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="100dp">

	<ImageView
			android:id="@+id/ntf_iv_icon"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:contentDescription="@string/hello"
			android:src="@drawable/default_music_img"/>

	<TextView
			style="@style/NotificationTitle"
			android:id="@+id/ntf_tv_musicName"
			android:layout_toEndOf="@id/ntf_iv_icon"
			android:layout_marginTop="2dp"
			android:layout_marginStart="5dp"
			android:layout_width="wrap_content"
			android:layout_height="28dp"
			android:gravity="bottom"

			android:singleLine="true"
			android:text="@string/loading"
			android:textColor="#ffffff"/>

	<TextView
			style="@style/Notification"
			android:id="@+id/ntf_tv_musicArtist"
			android:layout_alignStart="@id/ntf_tv_musicName"
			android:layout_below="@id/ntf_tv_musicName"
			android:layout_marginTop="2dp"
			android:layout_width="wrap_content"
			android:layout_height="24dp"
			android:gravity="top"

			android:singleLine="true"
			android:maxEms="10"
			android:text="@string/loading"
			android:textColor="#ffffff"/>

	<TextView
			style="@style/Notification"
			android:id="@+id/ntf_tv_separator"
			android:layout_toEndOf="@id/ntf_tv_musicArtist"
			android:layout_alignTop="@id/ntf_tv_musicArtist"
			android:layout_width="10dp"
			android:layout_height="24dp"
			android:gravity="center_horizontal"
			android:text="@string/separator"
			android:textColor="#ffffff"/>

	<TextView
			style="@style/Notification"
			android:id="@+id/ntf_tv_musicAlbum"
			android:layout_toEndOf="@id/ntf_tv_separator"
			android:layout_alignTop="@id/ntf_tv_musicArtist"
			android:layout_width="wrap_content"
			android:layout_height="24dp"
			android:gravity="top"

			android:singleLine="true"
			android:text="@string/loading"
			android:textColor="#ffffff"/>

	<ProgressBar
			style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
			android:id="@+id/ntf_sbar"
			android:layout_toEndOf="@id/ntf_iv_icon"
			android:layout_marginStart="5dp"
			android:layout_marginEnd="5dp"
			android:layout_below="@id/ntf_tv_musicArtist"
			android:layout_width="match_parent"
			android:layout_height="10dp"
	/>

	<ImageButton
			android:id="@+id/ntf_ibtn_quit"
			android:layout_alignParentEnd="true"
			android:layout_alignParentTop="true"
			android:layout_marginTop="5dp"
			android:layout_marginEnd="5dp"
			android:layout_height="20dp"
			android:layout_width="20dp"

			android:background="@drawable/btn_background"
			android:scaleType="fitXY"
			android:src="@drawable/button_exit_white"/>
	<LinearLayout
			android:layout_toEndOf="@id/ntf_iv_icon"
			android:layout_alignParentEnd="true"
			android:layout_below="@id/ntf_sbar"
			android:layout_alignParentBottom="true"
			android:layout_marginTop="2dp"
			android:layout_width="0dp"
			android:layout_height="0dp">
		<ImageButton
				android:id="@+id/ntf_ibtn_loop"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:layout_width="0dp"

				android:background="@drawable/btn_background"
				android:scaleType="fitCenter"
				android:src="@drawable/button_play"/>

		<ImageButton
				android:id="@+id/ntf_ibtn_previous"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:layout_width="0dp"

				android:background="@drawable/btn_background"
				android:scaleType="fitCenter"
				android:src="@drawable/button_previous_1"/>

		<ImageButton
				android:id="@+id/ntf_ibtn_pause"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:layout_width="0dp"

				android:background="@drawable/btn_background"
				android:scaleType="fitCenter"
				android:src="@drawable/button_play"/>

		<ImageButton
				android:id="@+id/ntf_ibtn_next"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:layout_width="0dp"

				android:background="@drawable/btn_background"
				android:scaleType="fitCenter"
				android:src="@drawable/button_next_1"/>


	</LinearLayout>

</RelativeLayout>